fix prettyfy for all other pages, fix tag title word wrap

--- a/_sass/example.scss
+++ b/_sass/example.scss
@@ -32,4 +32,9 @@
 		position: fixed;
 		top: $base-spacing-unit;
 	}
+
+	&__tag {
+		word-wrap: break-word;
+	}
+	
 }
